force-app/main/default/objects/MUSW__Sequence_Number__c/fields/MUSW__Control__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Control__c</fullName>
    <inlineHelpText>is the number issued permanent (ie. locked), or overwritten? If overwritten, can it be only done once more by a permanent number or overwritten many times over?</inlineHelpText>
    <label>Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
                <default>true</default>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>Overwrite Once</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>