force-app/main/default/objects/MUSW__Sequence_Number__c/fields/MUSW__Mode__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Mode__c</fullName>
    <description>Automatic or User requested</description>
    <inlineHelpText>Number is automatically issued or user requested</inlineHelpText>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
                <default>true</default>
                <label>Request</label>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Auto/Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>