force-app/main/default/objects/MUSW__Sequence_Number__c/fields/MUSW__Sequence_Field__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sequence_Field__c</fullName>
    <defaultValue>"Name"</defaultValue>
    <description>Name of Sequence field that contains the sequence number to be updated</description>
    <label>Sequence Field</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>