force-app/main/default/objects/MUSW__Sequence_Number__c/fields/MUSW__Source_Type_Fields__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Source_Type_Fields__c</fullName>
    <inlineHelpText>The field(s) containing the Source Type value</inlineHelpText>
    <label>Source Type Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MUSW__Type__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Permit_Type__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Status__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Current_Status__c</fullName>
            </value>
            <value>
                <fullName>abd_License_Type__c</fullName>
            </value>
            <value>
                <fullName>MUSW__Class__c</fullName>
            </value>
            <value>
                <fullName>Case_Type__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>