force-app/main/default/objects/MUSW__Sequence_Number__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>