force-app/main/default/objects/MUSW__Sequence_Number__c/fields/MUSW__Yearly_Reset__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Yearly_Reset__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Yearly Reset</label>
    <type>Checkbox</type>
</CustomField>