force-app/main/default/objects/MUSW__Sequence_Number__c/validationRules/MUSW__Auto_Rule_requires_Source_Type_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Auto_Rule_requires_Source_Type_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(MUSW__Mode__c, 'Auto'), ISNULL(MUSW__Source_Type_Fields__c),UPPER(Name)!='DEFAULT')</errorConditionFormula>
    <errorMessage>Auto Numbers require at least one Source Type Field</errorMessage>
</ValidationRule>