force-app/main/default/objects/MUSW__Sequence_Number__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Next_Number__c</columns>
    <columns>MUSW__Format__c</columns>
    <columns>MUSW__Object__c</columns>
    <columns>MUSW__Source_Type_Fields__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Control__c</columns>
    <columns>MUSW__Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>